# project-museums

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 07b35deb89b2_created_category_location_museums_tables.py  67aababf5183_created_category_location_museum.py  c19588e054e7_created_category_location_museum_tables.py  c50352cd52cd_create_category_location_museum_.py
app/: config.py  enter.py  main.py
app/api/: dependencies.py
app/api/api_v1/: router.py
app/crud/: user.py
app/db/: database.py
app/models/: models.py  user.py
src/: config.py  main.py  museums_loader.py  requirements.txt
src/engines/: sqldb.py
src/models/: museums.py
src/museums/: config.py  main.py  resources.py
src/museums/admin/: admin_base.py
src/museums/admin/statics/js/: custom_render.js  new_render.js
src/museums/admin/views/: exposition_view.py  museum_view.py  user_view.py
src/museums/artificial/: embedder.py  embeddings.py  html_converter.py  html_parser.py  html_splitter.py
src/museums/chats/: giga_chat.py
src/museums/data/: source_expositions.json  train_expositions.json  train_result.txt
src/museums/engines/: sqldb.py
src/museums/loaders/: exposition_loader.py  museum_loader.py
src/museums/models/: exposition_tables.py  museum_tables.py
src/museums/museums_chroma_db/: chroma.sqlite3
src/museums/routers/: root.py
src/museums/utils/: clean_tables.py
tests/: common.py  conftest.py  factory_museums.py  test_database.py
tests/api/: test_main_api.py  test_users.py
tests/data/: .~lock.data-20-structure-4-one.csv#  data-20-structure-4-one.csv
tests/loaders/: test_museum_loader.py
