[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "museums"
version = "1.0.0"

[project.scripts]
museum_loader = "museums.loaders.museum_loader:run_process"

[tool.setuptools.packages.find]
where = ["."]

[tool.alembic]

# path to migration scripts.
# this is typically a path given in POSIX (e.g. forward slashes)
# format, relative to the token %(here)s which refers to the location of this
# ini file
script_location = "%(here)s/alembic"

# template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
# Uncomment the line below if you want the files to be prepended with date and time
# see https://alembic.sqlalchemy.org/en/latest/tutorial.html#editing-the-ini-file
# for all available tokens
# file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# additional paths to be prepended to sys.path. defaults to the current working directory.
prepend_sys_path = [
    "."
]

# timezone to use when rendering the date within the migration file
# as well as the filename.
# If specified, requires the tzdata library which can be installed by adding
# `alembic[tz]` to the pip requirements.
# string value is passed to ZoneInfo()
# leave blank for localtime
# timezone =

# max length of characters to apply to the "slug" field
# truncate_slug_length = 40

# set to 'true' to run the environment during
# the 'revision' command, regardless of autogenerate
# revision_environment = false

# set to 'true' to allow .pyc and .pyo files without
# a source .py file to be detected as revisions in the
# versions/ directory
# sourceless = false

# version location specification; This defaults
# to <script_location>/versions.  When using multiple version
# directories, initial revisions must be specified with --version-path.
# version_locations = [
#    "%(here)s/alembic/versions",
#    "%(here)s/foo/bar"
# ]


# set to 'true' to search source files recursively
# in each "version_locations" directory
# new in Alembic version 1.10
# recursive_version_locations = false

# the output encoding used when revision files
# are written from script.py.mako
# output_encoding = "utf-8"

# This section defines scripts or Python functions that are run
# on newly generated revision scripts.  See the documentation for further
# detail and examples
# [[tool.alembic.post_write_hooks]]
# format using "black" - use the console_scripts runner,
# against the "black" entrypoint
# name = "black"
# type = "console_scripts"
# entrypoint = "black"
# options = "-l 79 REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
# name = "ruff"
# type = "module"
# module = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"
#
# [[tool.alembic.post_write_hooks]]
# Alternatively, use the exec runner to execute a binary found on your PATH
# name = "ruff"
# type = "exec"
# executable = "ruff"
# options = "check --fix REVISION_SCRIPT_FILENAME"

[tool.alembic.loggers]
keys = ["root", "sqlalchemy", "alembic"]

[tool.alembic.handlers]
keys = "console"

[tool.alembic.formatters]
keys = "generic"

[tool.alembic.logger_root]
level = "WARNING"
handlers = "console"
qualname = ""

[tool.alembic.logger_sqlalchemy]
level = "WARNING"
handlers = ""
qualname = "sqlalchemy.engine"

[tool.alembic.logger_alembic]
level = "INFO"
handlers = ""
qualname = "alembic"

[tool.alembic.handler_console]
class = "StreamHandler"
args = "(sys.stderr,)"
level = "NOTSET"
formatter = "generic"

[tool.alembic.formatter_generic]
format = "%(levelname)-5.5s [%(name)s] %(message)s"
datefmt = "%H:%M:%S"

# Глобальные параметры:

[tool.mypy]
python_version = 3.11
#mypy_path = ["./src"]  
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

namespace_packages = true
explicit_package_bases = true
warn_no_return = true
#warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
warn_unreachable = true
disallow_untyped_calls = true
#disallow_untyped_defs = on

exclude = "data"
files = "src"

#[mypy-engines.*]
#follow_untyped_imports = True

#[[tool.mypy.overrides]]
#module = "tests.*"
#disallow_untyped_defs = false

# Настройки с проекта cloudquota
[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | setup.py
    | data
)
'''

[tool.flake8]
max-line-length = 120
inline-quotes = "\""
ignore = [
    "DJ05", # URLs ...
    "E203", # whitespace before ...
]

exclude = [
    "alembic",
    ".git",
    "__pycache__",
    "data",
    "venv",
]

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
extra_standard_library = ["pytest"]
#known_django = ["django", "restframework"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3
#skip = ['data']

[tool.autoflake]
recursive = true
exclude = "data"
remove-all-unused-imports = true
in-place = true

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
    "integration",
]

